--- a/src/BigVisibleCruise/SettingsWindow.xaml
+++ b/src/BigVisibleCruise/SettingsWindow.xaml
@@ -1,9 +1,7 @@
 ﻿<Window
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Properties="clr-namespace:BigVisibleCruise.Properties;assembly="
     xmlns:Converters="clr-namespace:BigVisibleCruise.Converters;assembly="
-	xmlns:Validations="clr-namespace:BigVisibleCruise.Validations;assembly="
     xmlns:BigVisibleCruise_Properties="clr-namespace:BigVisibleCruise.Properties"
     xmlns:BigVisibleCruise_Validations="clr-namespace:BigVisibleCruise.Validations"
     x:Class="BigVisibleCruise.SettingsWindow"
@@ -22,7 +20,6 @@
 		<Converters:TimeSpanToDoubleConverter x:Key="TimeSpanToDoubleConverter" />
 		<Converters:SliderValueInSecondsToReadableTimeFormatConverter x:Key="SliderValueInSecondsToReadableTimeFormatConverter" />
 		<Converters:CruiseDashboardToStatusUrlConverter x:Key="CruiseDashboardToStatusUrlConverter" />
-		<Converters:BooleanToVisibleConverter x:Key="BooleanToVisibleConverter" />
 
         <Style x:Key="HeadingLabel" TargetType="{x:Type Label}">
 			<Setter Property="FontSize" Value="16" />
@@ -165,14 +162,14 @@
 			
 			<Slider Name="RefreshSlider"  Grid.Column="1" Grid.Row="4" Margin="2,5,2,5"
 					AutoToolTipPlacement="None"	Minimum="15" Maximum="600" SmallChange="30" LargeChange="60" 
-					Value="{Binding Source={x:Static Properties:Settings.Default}, Path=PollFrequency, Converter={StaticResource TimeSpanToDoubleConverter}, Mode=TwoWay}" TabIndex="1" />
+					Value="{Binding Source={x:Static BigVisibleCruise_Properties:Settings.Default}, Path=PollFrequency, Converter={StaticResource TimeSpanToDoubleConverter}, Mode=TwoWay}" TabIndex="1" />
 
 			<Label Grid.Column="0" Grid.Row="5" Height="25" Margin="2,5,2,5"
 				   Content="Visual Appearance"/>			
 			
 			<ListBox Grid.Column="1" Grid.Row="5" Margin="2,5,2,5"
 					 BorderThickness="0"
-					 SelectedValue="{Binding Source={x:Static Properties:Settings.Default}, Path=Skin, Mode=TwoWay}"
+					 SelectedValue="{Binding Source={x:Static BigVisibleCruise_Properties:Settings.Default}, Path=Skin, Mode=TwoWay}"
 					 SelectedValuePath="Tag" TabIndex="2">
 
 				<ListBox.ItemsPanel>
