--- a/trunk/src/BigVisibleCruise/SettingsWindow.xaml
+++ b/trunk/src/BigVisibleCruise/SettingsWindow.xaml
@@ -37,38 +37,6 @@
 			<Setter Property="Foreground" Value="Gray" />
 		</Style>
 
-        <Style x:Key="Error" TargetType="{x:Type Label}">
-            <Setter Property="Foreground" Value="Red" />
-            <Setter Property="FontWeight" Value="Bold" />
-        </Style>
-
-        <Style x:Key="TextBlockWithLinks" TargetType="{x:Type TextBlock}">
-			<Setter Property="FontStyle" Value="Italic" />
-			<Setter Property="HorizontalAlignment" Value="Right" />
-			<Setter Property="VerticalAlignment" Value="Center" />
-		</Style>
-		
-		<Style x:Key="FeedbackIcon" TargetType="{x:Type Image}">
-			<Setter Property="Height" Value="25" />
-			<Setter Property="Width" Value="25" />
-		</Style>
-		
-		
-		<Style x:Key="TextBoxWithValidation" TargetType="{x:Type TextBox}">
-			<Setter Property="Validation.ErrorTemplate">
-				<Setter.Value>
-					<ControlTemplate>
-						<AdornedElementPlaceholder Name="MyAdorner" />
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-			<Style.Triggers>
-				<Trigger Property="Validation.HasError" Value="true">
-					<Setter Property="Background" Value="Red" />
-				</Trigger>
-			</Style.Triggers>
-		</Style>
-
         <Style TargetType="{x:Type Button}">
             <Setter Property="Width" Value="70" />
         </Style>
@@ -105,9 +73,8 @@
 				<RowDefinition></RowDefinition>
 				<RowDefinition></RowDefinition>
 				<RowDefinition></RowDefinition>
-				<RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
-			</Grid.RowDefinitions>
+            </Grid.RowDefinitions>
 
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*"/>
@@ -118,38 +85,16 @@
 				   Style="{StaticResource HeadingLabel}"
 				   Content="Big Visible Cruise Settings" Padding="5" />
 
-            <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
-
-                <Label Name="DashboardUrlConfirmation" Content="The dasbhoard url is valid and will be saved." />
-                <Label Name="DashboardUrlError" Style="{StaticResource Error}" Content="{Binding ElementName=UrlTextBox, Path=(Validation.Errors)[0].ErrorContent}" />
-
-                <TextBlock Grid.Column="1" Grid.Row="1"
-                           Name="ValidateUrlTextBlock" 
-				           DockPanel.Dock="Right" Margin="2,5,2,5"
-				           Style="{StaticResource TextBlockWithLinks}"
-				           Visibility="Collapsed">
-			        <Hyperlink Click="Validate_Click">validate the dashboard url</Hyperlink>
-		        </TextBlock>
-                
-            </StackPanel>
-
             <Label Grid.Column="0" Grid.Row="1" Margin="2,5,2,5" 
 				   Content="Dashboard Url"/>
 
             <TextBox Grid.Column="1" Grid.Row="1" Name="UrlTextBox" Margin="2,5,2,5" Height="25"
-						 Style="{StaticResource TextBoxWithValidation}"
-						 TextChanged="UrlTextboxChanged" TabIndex="0">
+						 TabIndex="0">
 
                 <Binding Path="Dashboard" 
-							 UpdateSourceTrigger="Explicit" 
 							 Mode="TwoWay"
 							 Source="{x:Static BigVisibleCruise_Properties:Settings.Default}"
 							 Converter="{StaticResource CruiseDashboardToStatusUrlConverter}">
-
-                    <Binding.ValidationRules>
-                        <BigVisibleCruise_Validations:DashboardUrlValidationRule />
-                    </Binding.ValidationRules>
-
                 </Binding>
 
             </TextBox>                
