--- a/trunk/src/BigVisibleCruise/BigVisibleCruiseWindow.xaml
+++ b/trunk/src/BigVisibleCruise/BigVisibleCruiseWindow.xaml
@@ -14,22 +14,21 @@
 		<Style x:Key="StandardNavigationContainer" TargetType="{x:Type TextBlock}">
 			<Setter Property="VerticalAlignment" Value="Center" />
 			<Setter Property="Padding" Value="10,10,10,10" />
-			<Setter Property="FontFamily" Value="Segoe Script, Verdana" />
-			<Setter Property="FontSize" Value="8" />
+			<Setter Property="FontFamily" Value="Tahoma, Verdana" />
+			<Setter Property="FontSize" Value="10" />
 			<Setter Property="Foreground" Value="Gray" />
 		</Style>
 
 		<Style x:Key="HostAction" TargetType="{x:Type Hyperlink}">
-			<Setter Property="FontWeight" Value="Bold" />
-			<Setter Property="FontFamily" Value="Segoe Script, Verdana" />
-			<Setter Property="FontSize" Value="10" />
+			<Setter Property="FontFamily" Value="Tahoma, Verdana" />
+			<Setter Property="FontSize" Value="14" />
 			<Setter Property="Foreground" Value="LightGray" />				  
 		</Style>
 		
 		<Style x:Key="Logo" TargetType="{x:Type TextBlock}">
 			<Setter Property="FontSize" Value="16" />
 			<Setter Property="FontWeight" Value="Bold" />
-			<Setter Property="Padding" Value="10,10,10,10" />
+			<Setter Property="Padding" Value="5,5,5,5" />
 			<Setter Property="FontFamily" Value="Segoe Script, Verdana" />
 			<Setter Property="Foreground" Value="White" />
 		</Style>
@@ -57,7 +56,7 @@
 			<TextBlock DockPanel.Dock="Left"  Style="{StaticResource Logo}" Text="Big Visible Cruise" />
 			<TextBlock DockPanel.Dock="Right" Style="{StaticResource StandardNavigationContainer}">
 				<Hyperlink Style="{StaticResource HostAction}"
-						   Command="{x:Static Commands:CommandContainer.ShowSettingsCommand}">Open BVC Settings</Hyperlink>
+						   Command="{x:Static Commands:CommandContainer.ShowSettingsCommand}">Settings</Hyperlink>
 				<TextBlock>(F12)</TextBlock>
 			</TextBlock>
 			<TextBlock DockPanel.Dock="Right" Style="{StaticResource StandardNavigationContainer}">
