--- a/src/BigVisibleCruise/BigVisibleCruiseWindow.xaml
+++ b/src/BigVisibleCruise/BigVisibleCruiseWindow.xaml
@@ -14,22 +14,23 @@
 		<Style x:Key="StandardNavigationContainer" TargetType="{x:Type TextBlock}">
 			<Setter Property="VerticalAlignment" Value="Center" />
 			<Setter Property="Padding" Value="10,10,10,10" />
-			<Setter Property="FontFamily" Value="Tahoma, Verdana" />
+			<Setter Property="FontFamily" Value="Segoe, Verdana" />
 			<Setter Property="FontSize" Value="10" />
 			<Setter Property="Foreground" Value="Gray" />
 		</Style>
 
 		<Style x:Key="HostAction" TargetType="{x:Type Hyperlink}">
-			<Setter Property="FontFamily" Value="Tahoma, Verdana" />
-			<Setter Property="FontSize" Value="14" />
+			<Setter Property="FontFamily" Value="Segoe, Verdana" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="FontSize" Value="10" />
 			<Setter Property="Foreground" Value="LightGray" />				  
 		</Style>
 		
 		<Style x:Key="Logo" TargetType="{x:Type TextBlock}">
-			<Setter Property="FontSize" Value="16" />
+			<Setter Property="FontSize" Value="18" />
 			<Setter Property="FontWeight" Value="Bold" />
 			<Setter Property="Padding" Value="5,5,5,5" />
-			<Setter Property="FontFamily" Value="Segoe Script, Verdana" />
+			<Setter Property="FontFamily" Value="Segoe, Verdana" />
 			<Setter Property="Foreground" Value="White" />
 		</Style>
 		
