Updated with fix from http://code.google.com/p/bigvisiblecruise/issues/detail?id=37

--- a/src/BigVisibleCruise/HumaneMessageWindow.xaml
+++ b/src/BigVisibleCruise/HumaneMessageWindow.xaml
@@ -7,8 +7,7 @@
         AllowsTransparency="True"
         ShowInTaskbar="False" 
         Background="Transparent"
-        Topmost="True"
-        MouseMove="MouseMoveHandler">
+        Topmost="True">
 
   <Window.Resources>
 
